Immich/middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: immich-upload
  namespace: immich
spec:
  buffering:
    maxRequestBodyBytes: 0
    maxResponseBodyBytes: 0
---
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: immich-headers
  namespace: immich
spec:
  headers:
    customRequestHeaders:
      X-Forwarded-Proto: https
