Immich/deployment-machine-learning.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: immich-machine-learning
  template:
    metadata:
      labels:
        app: immich-machine-learning
    spec:
      containers:
        - name: machine-learning
          image: ghcr.io/immich-app/immich-machine-learning:release
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3003
          volumeMounts:
            - name: ml-cache
              mountPath: /cache
          readinessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 30
            periodSeconds: 15
            timeoutSeconds: 10
          livenessProbe:
            httpGet:
              path: /ping
              port: http
            initialDelaySeconds: 60
            periodSeconds: 30
            timeoutSeconds: 10
          resources:
            requests:
              cpu: 200m
              memory: 1Gi
            limits:
              memory: 4Gi
      volumes:
        - name: ml-cache
          persistentVolumeClaim:
            claimName: immich-ml-cache
