Immich/service-immich.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich
  namespace: immich
spec:
  selector:
    app: immich
  ports:
    - name: http
      port: 2283
      targetPort: 2283
