Immich/service-machine-learning.yaml
apiVersion: v1
kind: Service
metadata:
  name: immich-machine-learning
  namespace: immich
spec:
  selector:
    app: immich-machine-learning
  ports:
    - name: http
      port: 3003
      targetPort: 3003
